# plato-integration-tests

./: .gitattributes  README.md
analyze/: CMakeLists.txt
analyze/constraint_check/: CMakeLists.txt
analyze/constraint_check/CompMin2D_ROL_LC/: CMakeLists.txt  confirm_linearity.py  plato_input_deck.i
analyze/constraint_check/CompMin3D_ROL_AL/: CMakeLists.txt  ROL_constraint_check_output.gold.txt  plato_input_deck.i
analyze/constraint_check/CompMin3D_Volume_Constraint_ESP/: CMakeLists.txt  ROL_constraint_check_output.gold.txt  block_hole.csm  block_hole.i
analyze/data/: FixedBlocks.exo  bb_2block.exo  bb_2block.jou  beam.exo  bolted_bracket_1.exo  bolted_bracket_1.jou  bolted_bracket_2.exo  bolted_bracket_2.jou  bolted_bracket_coarse.exo  bolted_bracket_disp.exo  bolted_bracket_fixed_08.exo  bolted_bracket_tmech.exo  bolted_bracket_transmech.exo  cantilever.exo  design_vol.exo  design_vol.jou  lbracket.exo  lbracket.jou  mitchell_tri.exo  rect.exo  tm2.exo  two_block_tensile_hole.exo  two_block_tensile_hole.jou
analyze/examples/: CMakeLists.txt
analyze/examples/2Phys_Sym/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/CompMin2D_ROL_LC/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/CompMin3D_2Load/: CMakeLists.txt  ROL_output.txt.gold  beam.exo  plato_input_deck.i
analyze/examples/CompMin3D_2Loads_1Performer/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/CompMin3D_MassProp/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/CompMin3D_MassProp_Constraint/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/CompMin3D_MultiBlock/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/CompMin3D_Orthotropic_ROL_LC/: CMakeLists.txt  ROL_output.txt.gold  bolted_bracket.exo  plato_input_deck.i
analyze/examples/CompMin3D_ROL_AL/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/CompMin3D_ROL_LC/: ROL_output.txt.gold  plato_input_deck.i
analyze/examples/CompMin3D_ROL_LC_2/: CMakeLists.txt  ROL_output.txt.gold  mesh.exo  plato_input_deck.i
analyze/examples/CompMin3D_ROL_LC_3/: ROL_output.txt.gold  plato_input_deck.i
analyze/examples/CompMin3D_ROL_LC_4/: CMakeLists.txt  ROL_output.txt.gold  mesh.exo  plato_input_deck.i
analyze/examples/CompMin3D_Restart/: CMakeLists.txt  ROL_output.txt.gold  bolted_bracket.exo  initialguess.exo  plato_input_deck.i
analyze/examples/Disp_Opt_ROL_LC/: CMakeLists.txt  ROL_output.txt.gold  bolted_bracket.exo  plato_input_deck.i
analyze/examples/DisplacementCriterion/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/ESP_2block/: CMakeLists.txt  README.txt  plato_input_deck.i  solution.csm.gold  sphere_block.csm
analyze/examples/FixedBlocks_DefaultEnforceBounds/: FixedBlocks.i  ROL_output.txt.gold
analyze/examples/FixedBlocks_NoEnforceBounds/: CMakeLists.txt  FixedBlocks.i  ROL_output.txt.gold
analyze/examples/Helmholtz3D_Projection_ROL_LC/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/Helmholtz3D_ROL_LC/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/Helmholtz3D_SurfaceLengthScale/: CMakeLists.txt  ROL_output.txt.gold  beam.exo  plato_input_deck.i
analyze/examples/Helmholtz3D_SurfaceLengthScale_SymmPlane/: CMakeLists.txt  ROL_output.txt.gold  beam.exo  plato_input_deck.i
analyze/examples/LaminarFlowRe100/: Analyze_LaminarFlowRe100.ref.exo  CMakeLists.txt  pipe_flow.exo  plato_input_deck.i
analyze/examples/MPCs_Helmholtz/: CMakeLists.txt  ROL_output.txt.gold  bolted_bracket_arm.exo  bolted_bracket_arm.jou  plato_input_deck.i
analyze/examples/NaturalConvectionGr1e3/: Analyze_NaturalConvectionGr1e3.exodiff_commands  Analyze_NaturalConvectionGr1e3.ref.exo  CMakeLists.txt  heat_sink.exo  plato_input_deck.i
analyze/examples/ParallelESP/: CMakeLists.txt  plato_input_deck.i  rocker.csm  solution.csm.gold
analyze/examples/Stress_ROL_BC/: CMakeLists.txt  ROL_output.txt.gold  Stress_PA.i
analyze/examples/Thermal_Opt/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/Thermomechanics/: Analyze_Thermomechanics_MMA_IPOPT.exodiff_commands  Analyze_Thermomechanics_MMA_IPOPT.ref.exo  CMakeLists.txt  plato_input_deck.i
analyze/examples/Thermoplasticity/: Analyze_Thermoplasticity.ref.exo  CMakeLists.txt  pin.exo  plato_input_deck.i
analyze/examples/Tmech_Opt/: Analyze_Tmech_Opt.ref.exo  CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/Tmech_PNorm_Opt/: Analyze_Tmech_PNorm_Opt.ref.exo  CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/examples/VolAvgTensile/: CMakeLists.txt  ROL_output.txt.gold  plato_input_deck.i
analyze/functional/: CMakeLists.txt
analyze/functional/CompMin2D_LBracket/: CMakeLists.txt  ROL_Optimizer.txt.gold  input.i  plato_analyze_to.xml  plato_analyze_vol.xml
analyze/functional/CompMin2D_LBracket_2Load/: CMakeLists.txt  input-2-load.i
analyze/gradient_check/: CMakeLists.txt
analyze/gradient_check/2D_Stochastic/: ROL_gradient_check_output.txt.gold  distributions.xml  interface.xml  plato_analyze_2_operations.xml
analyze/gradient_check/2D_Stochastic_2_Parameters/: CMakeLists.txt  distributions.xml  interface.xml  rol_inputs.xml
analyze/gradient_check/2D_Stochastic_2_Performers/: CMakeLists.txt  ROL_gradient_check_output.txt.gold  defines.xml  distributions.xml  interface.xml  plato_analyze_2_operations.xml  (+2 more)
analyze/regression/: CMakeLists.txt
analyze/serialized/: CMakeLists.txt
analyze/utilities/: common_data.cmake  esp_fd_utils.py  finite_difference_utils.py  full_regression_test.py  grad_check.py
platostatics/error_handling/: CMakeLists.txt
proxy/: CMakeLists.txt
proxy/gradient_check/: CMakeLists.txt
proxy/regression/: CMakeLists.txt
proxy/serialized/: CMakeLists.txt
prune_and_refine/regression/: CMakeLists.txt
sierra/: CMakeLists.txt
sierra/examples/: CMakeLists.txt
sierra/functional/: CMakeLists.txt
sierra/gradient_check/: CMakeLists.txt
(+878 files in other folders)
