add_subdirectory(CompMin3D_Restart )
add_subdirectory(CompMin3D_2Load)
add_subdirectory(Helmholtz3D_SurfaceLengthScale)
add_subdirectory(Helmholtz3D_SurfaceLengthScale_SymmPlane)
add_subdirectory(MPCs_Helmholtz)
add_subdirectory(Thermoplasticity)
add_subdirectory(Tmech_Opt)
add_subdirectory(Tmech_PNorm_Opt)
add_subdirectory(Thermal_Opt)
add_subdirectory(LaminarFlowRe100)
add_subdirectory(ParallelESP)
add_subdirectory(ESP_2block)
add_subdirectory(Disp_Opt_ROL_LC)
add_subdirectory(CompMin2D_ROL_LC)
add_subdirectory(CompMin3D_ROL_LC)
add_subdirectory(CompMin3D_ROL_LC_2)
add_subdirectory(CompMin3D_ROL_LC_3)
add_subdirectory(CompMin3D_ROL_LC_4)
add_subdirectory(CompMin3D_ROL_AL )
add_subdirectory(CompMin3D_Orthotropic_ROL_LC)
add_subdirectory(Helmholtz3D_ROL_LC)
add_subdirectory(Helmholtz3D_Projection_ROL_LC)
add_subdirectory(Stress_ROL_BC)
add_subdirectory(FixedBlocks_DefaultEnforceBounds)
add_subdirectory(FixedBlocks_NoEnforceBounds)
add_subdirectory(2Phys_Sym)
add_subdirectory(CompMin3D_2Loads_1Performer)
add_subdirectory(Thermomechanics)
add_subdirectory(CompMin3D_MassProp)
add_subdirectory(CompMin3D_MassProp_Constraint)
add_subdirectory(CompMin3D_MultiBlock)
add_subdirectory(DisplacementCriterion)
add_subdirectory(VolAvgTensile)
add_subdirectory(NaturalConvectionGr1e3)
