add_subdirectory(AggregatorOutput)
add_subdirectory(BogusComm)
add_subdirectory(DoublyNestedOperation)
add_subdirectory(MissingOperation)
add_subdirectory(MultipleOperations)
add_subdirectory(StageInputs)
add_subdirectory(TwoPerformersOneOperation1)
add_subdirectory(TwoPerformersOneOperation2)
add_subdirectory(WrongOperationInput1)
add_subdirectory(WrongOperationInput2)
add_subdirectory(WrongOperationInput3)
add_subdirectory(WrongOperationInput4)
add_subdirectory(WrongOperationInput5)
add_subdirectory(WrongOperationInput6)
add_subdirectory(WrongOperationInput7)
