add_subdirectory(PruneAndRefine1)
add_subdirectory(PruneAndRefine2)
add_subdirectory(PruneAndRefine3)
add_subdirectory(PruneAndRefine4)
add_subdirectory(PruneAndRefine5)
add_subdirectory(PruneAndRefine6)
add_subdirectory(PruneAndRefine7)
add_subdirectory(PruneAndRefine8)
add_subdirectory(PruneAndRefine9)
add_subdirectory(PruneAndRefine10)
add_subdirectory(PruneAndRefine11)
add_subdirectory(PruneAndRefine12)
add_subdirectory(PruneAndRefine13)
add_subdirectory(PruneAndRefine14)
add_subdirectory(PruneAndRefine15)
add_subdirectory(PruneAndRefine16)
add_subdirectory(PruneAndRefine17)
add_subdirectory(PruneAndRefine18)
add_subdirectory(PruneAndRefine19)
add_subdirectory(PruneAndRefine20)
add_subdirectory(PruneAndRefineThreshold1)
add_subdirectory(PruneAndRefineThreshold2)

