add_subdirectory(SD_MassMockModalMatchTet4)
add_subdirectory(SD_ModalMatchPartTet4)
add_subdirectory(SD_ModalMatchWholeTet10)
add_subdirectory(SD_ModalMatchWholeTet4)
add_subdirectory(SD_ModalMatchPartTet10)
add_subdirectory(TF_TempMatch)
add_subdirectory(TF_TempMatch_2_var_1_proc)
add_subdirectory(TF_TempMatch_2_var_3_procs)
add_subdirectory(TF_TempMatch_3_procs)
add_subdirectory(SD_MassProperties_Simple)
